--- a/pluto/dev/CMakeLists.txt
+++ b/pluto/dev/CMakeLists.txt
@@ -5,9 +5,10 @@ set(CMAKE_BUILD_TYPE Debug)
 
 # Ищем библиотеку SoapySDR
 find_package(SoapySDR REQUIRED)
-
+include_directories("include/")
 set(MAIN_SOURCE_FILES
     ../main.cpp
+    src/pluto_lib.cpp
 )
 
 # Добавляем исполняемый файл
