--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = pluto/dev/third_party/imgui
 	url = https://github.com/ocornut/imgui.git
 	branch = docking
+[submodule "pluto/dev/third_party/implot3d"]
+	path = pluto/dev/third_party/implot3d
+	url = https://github.com/brenocq/implot3d
